--- a/Demineur/Demineur/AboutBox.resx
+++ b/Demineur/Demineur/AboutBox.resx
@@ -117,10 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="mspMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>288, 17</value>
-  </metadata>
-  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 56</value>
-  </metadata>
+  <data name="textBoxDescription.Text" xml:space="preserve">
+    <value>Projet pour l’atelier SCRUM de notre 4ème année de CFC au Centre Professionel Technique-Informatique. Nous devons, avec l’aide de M. Oliveira Marques Dilan, Mme. Sulzbach Gurgel Jessica, M. Tagliabue Gabor et M. Metry Sean, réaliser le jeu demineur en C#. </value>
+  </data>
 </root>
