Ajout de son bome

--- a/Demineur/Demineur/Properties/Resources.resx
+++ b/Demineur/Demineur/Properties/Resources.resx
@@ -160,4 +160,7 @@
   <data name="six" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\six.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Explosion_sound" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Explosion_sound.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
