--- a/Demineur/Properties/Resources.resx
+++ b/Demineur/Properties/Resources.resx
@@ -163,4 +163,13 @@
   <data name="zero" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\zero.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Ding_Sound_Effect" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ding_Sound_Effect.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Explosion_sound" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Explosion_sound.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="The_Body_Bome_The_Hurt_Locker" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\The_Body_Bome_The_Hurt_Locker.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
