--- a/Demineur/Properties/Resources.resx
+++ b/Demineur/Properties/Resources.resx
@@ -172,4 +172,7 @@
   <data name="The_Body_Bome_The_Hurt_Locker" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\The_Body_Bome_The_Hurt_Locker.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="horloge" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\horloge.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
